--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,23 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.swtorserversstatus"
       android:versionCode="2"
-      android:versionName="1.0"
-      >
+      android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8"/>
-
-           />
+           
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
 
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
-<uses-permission android:name="android.permission.CONTROL_LOCATION_UPDATES" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission."/>
 
     <application android:label="SWTOR Server Status" android:icon="@drawable/icon">
         <activity android:name=".ServerStatusMain"
